# Krishanu_AIE9_Assignments

./: .gitignore
03_The_Agent_Loop/: 1.0.0  The_Agent_Loop_Assignment.ipynb
04_Agentic_RAG_From_Scratch/: Agentic_RAG_From_Scratch_Assignment.ipynb
05_Multi_Agent_with_LangGraph/: Multi_Agent_Applications_Assignment.ipynb
06_Agent_Memory/: Agent_Memory_Assignment.ipynb
07_Deep_Agents/: Deep_Agents_Assignment.ipynb
08_Open_DeepResearch/: open-deep-research.ipynb
09_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  usecase_data_kg.json
10_Evaluating_RAG_With_Ragas/: Evaluating_Agents_Assignment.ipynb  Evaluating_RAG_Assignment.ipynb
11_Advanced_Retrieval/: .env.sample  (+1 more)
swarmmate_audit_workpaper_adapter/swarmmate_audit_workpaper_adapter/: .env.example  README.md  SwarmMate Audit Workpaper Adapter — Certification Challenge Draft.docx  SwarmMate_Audit_Workpaper_Adapter_Certification_Challenge_Draft.docx.docx  SwarmMate_project_metric_catalog.ipynb  gradio_app.py  langgraph.json  pyproject.toml  requirements.txt  run_local.py  test_served_graph.py
swarmmate_audit_workpaper_adapter/swarmmate_audit_workpaper_adapter/app/: README.md  __init__.py  models.py  rag.py  state.py  tools.py  workflow.py
swarmmate_audit_workpaper_adapter/swarmmate_audit_workpaper_adapter/app/graphs/: __init__.py  workpaper_adapter_with_guardrails.py  workpaper_assistant.py
swarmmate_audit_workpaper_adapter/swarmmate_audit_workpaper_adapter/data/: client_overview.md  control_notes.md  pbc_request_list.md  trial_balance.csv
(+53 files in other folders)
